edit images , create slider , make loadLess function , install animation.css

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@progress/kendo-theme-default": "latest",
     "@syncfusion/ej2-angular-navigations": "^18.3.51",
     "@tailwindcss/custom-forms": "0.2.1",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
     "chart.js": "2.9.3",
